add walkspeed command add comment to walkspeed module fix comment on sprint module

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,6 @@ commands:
     description: RoleplayExtras admin commands
     aliases:
       - rpextras
+  walkspeed:
+    usage: /walkspeed <speed> (player)
+    description: Sets walking speed
