--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,8 @@ description: '${description}'
 website: '${url}'
 api-version: '1.20'
 folia-supported: true
+soft-depend:
+  - voicechat
 
 commands:
   roleplayextras:
@@ -16,3 +18,6 @@ commands:
   walkspeed:
     usage: /walkspeed <speed> (player)
     description: Sets walking speed
+  voicepitch:
+    usage: /voicepitch <pitch> (player)
+    description: Sets voice pitch
