--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,8 @@ description: '${description}'
 website: '${url}'
 api-version: '1.20'
 folia-supported: true
+softdepend:
+  - packetevents
 
 commands:
   roleplayextras:
