--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,10 +4,11 @@ main: ron.thewizard.roleplayextras.RoleplayExtras
 authors: [ xGinko ]
 description: '${description}'
 website: '${url}'
-api-version: '1.20'
-folia-supported: true
+api-version: '1.21'
+folia-supported: false
 softdepend:
   - packetevents
+  - Citizens
 
 commands:
   roleplayextras:
