--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ authors: [ xGinko ]
 description: '${description}'
 website: '${url}'
 api-version: '1.21'
-folia-supported: false
+folia-supported: true
 softdepend:
   - packetevents
   - Citizens
